--- a/packages/common/src/locales/en.json
+++ b/packages/common/src/locales/en.json
@@ -68,7 +68,9 @@
         "DIFFERENT_DATASET_IDS": "Dataset ids do not match",
         "INVALID_BLOCK_NO": "Invalid block number",
         "ID_MISMATCH": "captcha id mismatch",
-        "MISSING_ITEM_HASH": "missing item hash"
+        "MISSING_ITEM_HASH": "missing item hash",
+        "INVALID_LEAF_HASH": "Invalid leaf hash",
+        "INVALID_CAPTCHA_CHALLENGE": "Invalid captcha challenge"
     },
     "API": {
         "BODY_UNDEFINED": "Body must be defined in API POST call",
