--- a/packages/common/src/locales/en.json
+++ b/packages/common/src/locales/en.json
@@ -74,7 +74,8 @@
         "INVALID_LEAF_HASH": "Invalid leaf hash",
         "INVALID_CAPTCHA_CHALLENGE": "Invalid captcha challenge",
         "INVALID_DATASET_CONTENT_ID": "Invalid dataset content id",
-        "DAPP_USER_SOLUTION_NOT_FOUND": "Dapp user solution not found"
+        "DAPP_USER_SOLUTION_NOT_FOUND": "Dapp user solution not found",
+        "INVALID_PROVIDER_URL": "Invalid provider url",
     },
     "API": {
         "BODY_UNDEFINED": "Body must be defined in API POST call",
