--- a/packages/common/src/locales/en.json
+++ b/packages/common/src/locales/en.json
@@ -38,6 +38,7 @@
         "INVALID_TYPE": "Invalid type",
         "INVALID_ABI": "Invalid ABI",
         "NOT_HANDLED": "Not handled",
+        "INVALID_STORAGE_TYPE": "Invalid storage type",
     },
     "CONFIG": {
         "UNKNOWN_ENVIRONMENT": "Unknown environment requested",
