--- a/packages/common/src/locales/en.json
+++ b/packages/common/src/locales/en.json
@@ -21,7 +21,8 @@
         "MNEMONIC_UNDEFINED": "Provider mnemonic Undefined. Please set `PROVIDER_MNEMONIC` in environment variables",
         "ASYNC_FACTORY_CREATE": "Use `create` factory method",
         "CANT_FIND_KEYRINGPAIR": "Can't find the keyringpair for {{address}}",
-        "ENVIRONMENT_NOT_READY": "Environment not ready"
+        "ENVIRONMENT_NOT_READY": "Environment not ready",
+        "INVALID_SIGNATURE": "Invalid signature",
     },
     "CONTRACT": {
         "INVALID_METHOD": "Invalid contract method",
