common: removed target from the translation to enable bold target label

--- a/packages/common/src/locales/en.json
+++ b/packages/common/src/locales/en.json
@@ -1,6 +1,6 @@
 {
     "WIDGET": {
-        "SELECT_ALL": "Select all images containing a {{target}}",
+        "SELECT_ALL": "Select all images containing a",
         "NEXT": "Next",
         "SUBMIT": "Submit",
         "CANCEL": "Cancel",
