common: Add new translation keys related to funding developer accounts

--- a/packages/common/src/locales/sr.json
+++ b/packages/common/src/locales/sr.json
@@ -106,6 +106,7 @@
         "CREATE_ACCOUNT_FAILED": "Nije moguće kreirati nalog!",
         "CREATE_ACCOUNT_FAILED_OUT_OF_FUNDS": "Could not create an account as there are no funds. Restart the substrate node.",
         "NO_MOCK_ENV": "MockEnvironment nije podešen",
-        "ACCOUNT_TYPE_MISSING": "{{accountType}} nije kreiran od strane databasePopulator-a"
+        "ACCOUNT_TYPE_MISSING": "{{accountType}} nije kreiran od strane databasePopulator-a",
+        "FUNDING_FAILED": "Finansiranje nije uspelo"
     }
 }
