--- a/packages/datasets/src/processor_usage/image_processing.ipynb
+++ b/packages/datasets/src/processor_usage/image_processing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,27 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=512x512 at 0x7FD67EBFB4F0>\n",
-      "<PIL.Image.Image image mode=RGB size=512x512 at 0x7FD67EC6C7F0>\n",
-      "<PIL.Image.Image image mode=RGBA size=512x512 at 0x7FD67EC6C820>\n",
-      "<PIL.Image.Image image mode=RGBA size=512x512 at 0x7FD67EC6CA00>\n",
-      "<PIL.Image.Image image mode=RGB size=512x512 at 0x7FD67EC6C8B0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize the ImageProcessor\n",
     "processor = ImageProcessor([\"src_images/image.png\"], \"arial.ttf\")\n",
     "# Process images\n",
-    "processor.process_image(\"target\")\n",
-    "\n"
+    "processor.process_image(\"target\")"
    ]
   }
  ],
