processer changes for multiple folder structure with progress bar

--- a/packages/datasets/src/processor_usage/image_processing.ipynb
+++ b/packages/datasets/src/processor_usage/image_processing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize the ImageProcessor\n",
-    "processor = ImageProcessor([\"src_images/image.png\"], \"arial.ttf\")\n",
-    "# Process images\n",
-    "processor.process_image(\"target\")"
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "dir1 = \"/home/user/datasets/source_images\"\n",
+    "dir2 = \"/home/user/datasets/target_images\"\n",
+    "\n",
+    "# Get folder names in both directories\n",
+    "folder_names_dir1 = {d for d in os.listdir(dir1) if os.path.isdir(os.path.join(dir1, d))}\n",
+    "folder_names_dir2 = {d for d in os.listdir(dir2) if os.path.isdir(os.path.join(dir2, d))}\n",
+    "\n",
+    "# Find common folder names\n",
+    "common_folders = folder_names_dir1.intersection(folder_names_dir2)\n",
+    "\n",
+    "# Remove common folders from dir1\n",
+    "for folder in common_folders:\n",
+    "    shutil.rmtree(os.path.join(dir1, folder))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# specify path to your font\n",
+    "font_path = 'arial.ttf'\n",
+    "\n",
+    "# create ImageProcessor instance\n",
+    "processor = ImageProcessor(font_path)\n",
+    "\n",
+    "# specify source and target folders\n",
+    "source_folder = '/home/user/datasets/source_images'\n",
+    "target_folder = '/home/user/datasets/target_images'\n",
+    "\n",
+    "# process all images in source folder and save them in target folder\n",
+    "processor.process_folder(source_folder, target_folder)\n"
    ]
   }
  ],
