--- a/packages/common/src/locales/sr.json
+++ b/packages/common/src/locales/sr.json
@@ -100,7 +100,7 @@
         "PARAMETER_ERROR": "Nevažeći parametar"
     },
     "DEVELOPER": {
-        "DAPP_CONTRACT_ADDRESS_MISSING": "DAPP_CONTRACT_ADDRESS nije podešen u .env datoteci.",
+        "DAPP_SITE_KEY_MISSING": "DAPP_SITE_KEY nije podešen u .env datoteci.",
         "BALANCE_TOO_LOW": "{{mnemonic}} balans je prenizak: {{balance}}",
         "CAPTCHA_ID_MISSING": "Nije moguće pronaći ID podataka captcha-e",
         "COMMITMENT_ID_MISSING": "Nedostaje ID predaje",
