--- a/packages/common/src/locales/sr.json
+++ b/packages/common/src/locales/sr.json
@@ -46,7 +46,8 @@
     "CONFIG": {
         "UNKNOWN_ENVIRONMENT": "Zatraženo je nepoznato okruženje",
         "INVALID_CAPTCHA_NUMBER": "Molimo vas da ispravno podesite captcha konfiguracije",
-        "CONFIGURATIONS_LOAD_FAILED": "Učitavanje Prosopo konfiguracija nije uspelo"
+        "CONFIGURATIONS_LOAD_FAILED": "Učitavanje Prosopo konfiguracija nije uspelo",
+        "INVALID_PACKAGES_DIRECTORY": "Nevažeći direktorijum paketa"
     },
     "DATASET": {
         "PARSE_ERROR": "Greška pri parsiranju skupa podataka",
