--- a/packages/common/src/locales/en.json
+++ b/packages/common/src/locales/en.json
@@ -48,6 +48,7 @@
         "INVALID_CAPTCHA_NUMBER": "Please configure captchas configurations correctly",
         "CONFIGURATIONS_LOAD_FAILED": "Prosopo configurations load failed",
         "INVALID_PACKAGES_DIRECTORY": "Invalid packages directory",
+        "INVALID_LOG_LEVEL": "Invalid log level"
     },
     "DATASET": {
         "PARSE_ERROR": "Error parsing dataset",
